# Arkhon-Rheo

./: .coverage  .env  .gitignore  .gitignore.swp  GEMINI.md  README.md  error.md  extension.md  main.py  mkdocs.yml  pyproject.toml  ty.toml  ty_errors.md  workflow_context.yaml.example
.agent/: context_pack.md  review_instructions.md  review_report.md  skill_tags.yaml  skills  skills_index.json
.agent/prompts/: build-phase-docs.md
.agent/prompts/ape_meta/: meta_prompts.yaml
.agent/scripts/: git_context.py
.agent/workflows/: sdlc-state-machine.md  skill-selector.md
.kbdocs/: CATALOG.md  SUMMARY.md  agile.md  context7.md  critic.md  raci-workflows.md  waterfall.md  workflow-explain.md  workflow-sop-c4.md  workflow-sop.md
.research/initial/: AGENT_WORKFLOWS.md  CONCEPTS.md  CONSTITUTIONS.md  ROADMAP_v1.0.md  ResearchReport.md
.research/initial/tmp/: APE_ART.md  CONSTITUTIONS.md  DEFINED_NONSTANDARD_DEVELOPING.md  LANGCHAIN_LANGGRAPH_LANGSMITH.md  LLM_GEMMA3.md  TESTS_PLANNING.md
.research/reports/: claude-opus-4.5-thinking.md  gemini-3-pro.md
arkhon_rheo/tests/: test_rules.py
config/: workflow_context.yaml
docker/: Dockerfile  docker-compose.yml
docs/: architecture.md  cli_reference.md  getting_started.md  index.md
docs/archive/v0.1.0/: skills-manifest.md
docs/concept/: KEYWORDS.md  VISIONS.md
docs/design-architecture/: acl.md  architecture-overview.md  architecture.md  design-patterns.md  registry-api.md  rules.md  security-report-20260219.md  security-report-20260220.md  specification.md  state-machine.md
docs/dev-notes/: dev-guide.md  migration-guide.md  refactor-notes.md  tdd-strategy.md
docs/examples/: multi_agent.md
docs/overview/: philosophy.md  roadmap.md
docs/project/: TODOLIST.md  walkthrough.md
docs/reference/: index.md
docs/roadmap/: raci_workflows_roadmap.md
docs/setup/: DEPENDENCIES.md
docs/system/: WORKFLOW_AUTOMATION.md
docs/user-guide/examples/: raci-matrix.md  simple.md
docs/vers0.1.0/: ACL.md  ARCHITECTURE.md  DESIGN.md  DEVGUIDE.md  DOC_INDEX.md  PHASE1_INDEX.md  PHASE1_SKILLS.md  PHASE2_INDEX.md  PHASE2_REPORT.md  PHASE2_SKILLS.md  PHASE3_INDEX.md  PHASE4_INDEX.md  PHASE4_SKILLS.md  PROMPTS_COLLECTIONS.md  README.md  ROADMAP.md  RULES.md  SKILLS_MANIFEST.md  SPECIFICATION.md  STATE_MACHINE.md  TDD.md
docs/vers0.1.0/oop/: IMPLEMENTATION_FLOW.md  README.md  class_diagram.md  class_inventory.md  crc_cards.md  methods_properties.md  methods_properties.md.metadata.json  task.md  task.md.metadata.json  typing_guide.md  typing_guide.md.metadata.json  walkthrough.md  walkthrough.md.metadata.json
examples/multi_agent_orchestration/: main.py
examples/raci_workflow/: critic_workflow.py
examples/simple_agent/: main.py  plan.md
research/langchain-ecosystem/: bash-tree.md  langchain-ai-docs.txt  langchain-ai-docs.xml
research/thoughts/: EVOLUTION.md  chain_results.md  langchain.md  run_chain.py  sequential_thinking.yaml
scripts/: dev-tdd.sh  full_tests.py  gather_files.py  init.sh
site/: 404.html  index.html  sitemap.xml
site/architecture/: index.html
site/cli_reference/: index.html
site/concept/KEYWORDS/: index.html
site/concept/VISIONS/: index.html
site/examples/multi_agent/: index.html
site/examples/simple/: index.html
site/getting_started/: index.html
site/project/TODOLIST/: index.html
site/refactor/: index.html
site/reference/: index.html
site/search/: search_index.json
site/setup/DEPENDENCIES/: index.html
site/system/IMPLEMENTATION_GUIDE/: index.html
site/system/WORKFLOW_AUTOMATION/: index.html
site/vers0.1.0/: index.html
site/vers0.1.0/ACL/: index.html
site/vers0.1.0/ARCHITECTURE/: index.html
site/vers0.1.0/DESIGN/: index.html
site/vers0.1.0/DEVGUIDE/: index.html
site/vers0.1.0/DOC_INDEX/: index.html
site/vers0.1.0/PHASE1_INDEX/: index.html
site/vers0.1.0/PHASE1_SKILLS/: index.html
site/vers0.1.0/PHASE2_INDEX/: index.html
site/vers0.1.0/PHASE2_REPORT/: index.html
site/vers0.1.0/PHASE2_SKILLS/: index.html
site/vers0.1.0/PHASE3_INDEX/: index.html
site/vers0.1.0/PHASE3_REPORT/: index.html
site/vers0.1.0/PHASE3_SKILLS/: index.html
site/vers0.1.0/PHASE4_INDEX/: index.html
site/vers0.1.0/PHASE4_REPORT/: index.html
site/vers0.1.0/PHASE4_SKILLS/: index.html
site/vers0.1.0/PROMPTS_COLLECTIONS/: index.html
site/vers0.1.0/ROADMAP/: index.html
site/vers0.1.0/RULES/: index.html
site/vers0.1.0/SKILLS_MANIFEST/: index.html
site/vers0.1.0/SPECIFICATION/: index.html
site/vers0.1.0/STATE_MACHINE/: index.html
site/vers0.1.0/TDD/: index.html
site/vers0.1.0/oop/: class_diagram.md.metadata.json  class_inventory.md.metadata.json  crc_cards.md.metadata.json  index.html
site/vers0.1.0/workflows_ai-agentic-system-builder/: index.html
src/: weather_processor.py
src/arkhon_rheo/agents/: coordinator.py  specialist.py
src/arkhon_rheo/cli/: main.py  migrate.py
src/arkhon_rheo/config/: loader.py  raci_loader.py  schema.py
src/arkhon_rheo/core/: agent.py  context.py  forward_message.py  graph.py  message.py  registry.py  shared_state.py  state.py  step.py  subgraph.py
src/arkhon_rheo/nodes/: action_node.py  base.py  commit_node.py  governance.py  observation_node.py  thought_node.py  validate_node.py
src/arkhon_rheo/orchestrator/: base.py  concrete.py  decision_nodes.py  meta_graph.py
src/arkhon_rheo/roles/: __init__.py  base.py  concrete.py
src/arkhon_rheo/rules/: base.py  builtin.py  rule_engine.py
src/arkhon_rheo/runtime/: scheduler.py
src/arkhon_rheo/tools/: base.py  registry.py  target_project.py
src/arkhon_rheo/workflows/: __init__.py  base.py  scheme1_waterfall.py  scheme2_agile.py  scheme3_critic.py
tests/: run_tools.py  test_phase1_raci_foundation.py  test_phase2_workflow_graphs.py  test_phase5_orchestrator.py  test_weather.py
tests/integration/: test_agent_communication.py  test_nested_subgraph.py  test_orchestration.py  test_react_cycle.py
tests/unit/agents/: test_coordinator.py  test_specialist.py
tests/unit/cli/: test_main.py  test_security_init.py
tests/unit/config/: test_config.py
tests/unit/core/: test_agent.py  (+10 more)
(+50 files in other folders)
