[project]
name = "arkhon-rheo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gemma>=3.3.0",
    "google-genai>=1.63.0",
    "langchain>=1.2.10",
    "langchain-google-genai>=4.2.0",
    "langchain-ollama>=1.0.1",
    "langgraph>=1.0.8",
    "langsmith>=0.7.3",
    "ollama>=0.6.1",
    "prometheus-client>=0.24.1",
    "pydantic>=2.12.5",
    "pyyaml>=6.0.3",
    "structlog>=25.5.0",
]

[dependency-groups]
dev = [
    "mkdocs-material>=9.7.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "radon>=6.0.1",
    "ruff>=0.15.1",
    "ty>=0.0.17",
    "types-pyyaml>=6.0.12.20250915",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["repos"]



