[project]
name = "arkhon-rheo"
version = "0.1.0"
description = "A sophisticated multi-agent orchestration framework built on LangGraph and Google GenAI."
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Yao-Chu Wu", email = "yaochuwu.tw@gmail.com" },
]
maintainers = [
    { name = "Arkhon-Rheo Maintainers", email = "maintainers@arkhon-rheo.ai" },
]
keywords = ["multi-agent", "orchestration", "langgraph", "gemini", "ai-agent", "tdd"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "gemma>=3.3.0",
    "google-genai>=1.63.0",
    "langchain>=1.2.10",
    "langchain-google-genai>=4.2.0",
    "langchain-ollama>=1.0.1",
    "langgraph>=1.0.8",
    "langsmith>=0.7.3",
    "ollama>=0.6.1",
    "prometheus-client>=0.24.1",
    "pydantic>=2.12.5",
    "pyyaml>=6.0.3",
    "structlog>=25.5.0",
    "click>=8.1.7",
]

[project.scripts]
arkhon-rheo = "arkhon_rheo.cli.main:main"

[dependency-groups]
dev = [
    "mkdocs-material>=9.7.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "radon>=6.0.1",
    "ruff>=0.15.1",
    "ty>=0.0.17",
    "types-pyyaml>=6.0.12.20250915",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
norecursedirs = ["repos"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "S", "A", "C4", "T20", "RET", "SIM", "ARG", "PTH", "ERA", "PL"]
ignore = []

[tool.ruff.lint.isort]
combine-as-imports = true
force-single-line = false

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]
"src/arkhon_rheo/tools/target_project.py" = ["S602"]  # shell=True is whitelisted/guarded

[tool.ty.rules]
# LangGraph StateGraph accepts plain TypedDict at runtime (duck-typed StateLike).
# ty does not recognize this pattern — suppress the false-positive in workflow files.
invalid-argument-type = "ignore"
